istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: bankcore-mtls
  namespace: bankcore
spec:
  mtls:
    mode: PERMISSIVE
